one_adventure/envoy.yaml
node:
  id: one-adventure
  cluster: one-adventure
dynamic_resources:
  ads_config:
    api_type: GRPC
    grpc_services:
      - envoy_grpc:
          cluster_name: xds-control-plane
  cds_config:
    ads: {}
static_resources:
  listeners:
    - name: service-proxy
      address:
        socket_address: { address: 0.0.0.0, port_value: 15001 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: service_proxy
                codec_type: AUTO
                http2_protocol_options: {}
                route_config:
                  name: service-routes
                  virtual_hosts:
                    - name: all-services
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster_header: ":authority"
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: xds-control-plane
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 1s
      http2_protocol_options: {}
      load_assignment:
        cluster_name: xds-control-plane
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: xds, port_value: 18000 }
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
